[WAL-4624] Fix public offering grid alignment if there's only one item

--- a/src/marketplace/offerings/service-providers/shared/grid/GridBody.scss
+++ b/src/marketplace/offerings/service-providers/shared/grid/GridBody.scss
@@ -3,4 +3,10 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 24px;
   justify-items: center;
+
+  &.hasOneItem {
+    @media (min-width: 768px) {
+      justify-items: left;
+    }
+  }
 }
